--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!--Animate css-->
   <link rel="stylesheet" href="css/animate.css">
-
+  <!-- Main Styles -->
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/temp.css">
   <!-- Landing navigation -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<!--   <link rel="stylesheet" href="css/demo.css"> -->
   <link rel="stylesheet" href="css/liLanding.css">
   <script src="js/jquery-1.9.0.min.js"></script>
   <script src="js/jquery.liLanding.js"></script>
@@ -25,185 +28,177 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+      <nav class="navbar navbar-expand-lg landingMenu">
+        <button class="navbar-toggler row" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon">...</span>
+          <!-- 
+          <span class="col-6 bg_dark">
+            <span class="navbar-toggler-icon">...</span>
+            <a class="navbar-brand m-0" href="/">TOMORU</a>
+          </span>
+          <span class="col-6" style="overflow: hidden;">
+            <a class="nav-link p-0" href="#" style="font-size: 2vw;">Пообщаться с ботом
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0.5" y="0.5" width="15" height="15" rx="7.5" fill="white" stroke="#06A77D"/>
+                <path d="M7 11L10 8L7 5" stroke="#06A77D" stroke-linejoin="round"/>
+              </svg>
+            </a>
+          </span>
+          -->
+
           </button>
+          <a class="navbar-brand" href="/">TOMORU</a>
+
+          <a class="nav-link d-lg-none" href="#">Пообщаться с ботом
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect x="0.5" y="0.5" width="15" height="15" rx="7.5" fill="white" stroke="#06A77D"/>
+              <path d="M7 11L10 8L7 5" stroke="#06A77D" stroke-linejoin="round"/>
+            </svg>
+          </a>
+
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="#">Hidden brand</a>
+          <!-- <a class="navbar-brand" href="/">TOMORU</a> -->
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#land_1">Преимущества</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#land_2">Схемы работы</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+              <a class="nav-link" href="#land_3">Настройка</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#land_4">Кейсы</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#land_5">Цены</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#land_6">Гарантии</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          <div class="nav-item my-2 my-lg-0">
+            <a class="nav-link" href="#">Пообщаться с ботом
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0.5" y="0.5" width="15" height="15" rx="7.5" fill="white" stroke="#06A77D"/>
+                <path d="M7 11L10 8L7 5" stroke="#06A77D" stroke-linejoin="round"/>
+              </svg>
+            </a>
+          </div>
         </div>
       </nav>
 
-      <div class="alert alert-primary alert-dismissible fade show" role="alert">
-        A simple primary alert with <a href="#" class="alert-link wow fadeIn">an example link</a>. Give it a click if you like.
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+      <div class="d-none d-md-block" style="position:relative">
+          <div class="landingNav2 landingDotted">
+              <ul>
+                  <li><a href="#land_0">landing link 0</a></li>
+                  <li><a href="#land_1">landing link 1</a></li>
+                  <li><a href="#land_2">landing link 2</a></li>
+                  <li><a href="#land_3">landing link 3</a></li>
+                  <li><a href="#land_4">landing link 4</a></li>
+                  <li><a href="#land_5">landing link 5</a></li>
+                  <li><a href="#land_6">landing link 6</a></li>
+              </ul>
+          </div>
       </div>
     </header>
-    <div class="jumbotron">
-      <h1 class="display-4 wow fadeInLeft">Hello, world!</h1>
-      <p class="lead wow fadeInRight">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <hr class="my-4">
-      <p class="wow fadeIn">It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      <a class="btn btn-primary btn-lg wow fadeInUp" href="#" role="button">Learn more</a>
-    </div>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="https://api.fnkr.net/testimg/800x400/777/FFF/?text=First+slide" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://api.fnkr.net/testimg/800x400/666/FFF/?text=Second+slide" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://api.fnkr.net/testimg/800x400/555/FFF/?text=Third+slide" alt="Third slide">
-        </div>
+    <div class="" style="margin-top: 100px;">
+      <div id="land_0" class="landingItem">
+          <div class="bg_0 row">
+              <!-- <div class="decoy">0</div> -->
+              <div class="col-12 col-md-5 offset-md-2 text-left">
+                <p class="tomoru-font-1">Речевые боты с нейронными сетями</p>
+                <p class="tomoru-font-2">Автоматизируют бизнес и зарабатывают для вас</p>
+
+                <!-- <img src="img/macbook.png" alt="" align="right" width="40%" class="d-md-none"> -->
+                <div class="row">
+                  <div class="col-7 row">
+                    <p class="tomoru-font-3 col-12"><img src="img/icons/face.svg" align="left">До 50% снижают нагрузку на менеджеров</p>
+                    <p class="tomoru-font-3 col-12"><img src="img/icons/face.svg" align="left">В 2 раза экономичней менеджеров</p>
+                    <p class="tomoru-font-3 col-12"><img src="img/icons/face.svg" align="left">На связи<br>круглые сутки</p>
+                  </div>
+                  <div class="col-5 d-md-none">
+                    <img src="img/macbook.png" alt="" align="right" width="100%" class="d-md-none">
+                  </div>
+                </div>
+
+
+                <a href="#" class="tomoru-font-3 tomoru-btn-1">Создать бота</a>
+              </div>
+              <div class="col-5 col-md-4 tomoru-img-macbook d-none d-md-block">
+                
+              </div>
+          </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-    </div>
+      <div id="land_1" class="landingItem mt-5">
+          <div class="bg_1">
+              <!-- <div class="decoy">1</div> -->
+              <div class="col-12 col-md-5 offset-md-2 text-left">
+                <p class="tomoru-font-1">Поддерживают диалог с клиентами</p>
+                <p class="tomoru-font-2">Диалоговый интерфейс с информационными системами в виде текста и голоса</p>
 
-    <h1 class="text-center">Super Title!</h1>
+                <!-- <img src="img/macbook.png" alt="" align="right" width="40%" class="d-md-none"> -->
+                <div class="col-12 row">
+                  <div class="col-8 col-md-12 row">
+                    <p class="tomoru-font-3 col-12"><img src="img/icons/check.svg" align="left"><b>Никогда не забывает</b><br>Перезвонить, отправить предложение или выставить счёт</p>
+                    <p class="tomoru-font-3 col-12"><img src="img/icons/check.svg" align="left"><b>Всегда стабилен</b><br>Не ленится, не болеет, не бывает в плохом настроении</p><br>
+                    <p class="tomoru-font-3 col-12"><img src="img/icons/check.svg" align="left"><b>Круглосуточно на связи</b><br>Общается с клиентами без перерывов и выходных</p><br>
+                    <p class="tomoru-font-3 col-12"><img src="img/icons/check.svg" align="left"><b>Отвечает быстро</b><br>В 6-12 раз быстрее отвечает на звонок, в 5-20 раз быстрее отвечает на вопросы клиента *</p><br>
+                  </div>
+                  <div class="col-4 d-md-none">
+                    <img src="img/macbook.png" alt="" align="right" width="100%" class="d-md-none">
+                  </div>
+                </div>
 
-    <div class="card-deck">
-      <div class="card">
-        <img class="card-img-top" src="https://api.fnkr.net/testimg/239x180/555/FFF/?text=Card+One" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
+
+                <a href="#" class="tomoru-font-3 tomoru-btn-1">Создать бота</a>
+              </div>
+              <div class="col-5 col-md-4 tomoru-img-macbook d-none d-md-block">
+                
+              </div>
+          </div>
       </div>
-      <div class="card">
-        <img class="card-img-top" src="https://api.fnkr.net/testimg/239x180/555/FFF/?text=Card+Two" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
+      <div id="land_2" class="landingItem">
+          <div class="bg_2">
+              <div class="decoy">2</div>
+          </div>
       </div>
-      <div class="card">
-        <img class="card-img-top" src="https://api.fnkr.net/testimg/239x180/555/FFF/?text=Card+Three" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
+      <div id="land_3" class="landingItem">
+          <div class="bg_3">
+              <div class="decoy">3</div>
+          </div>
+      </div>
+      <div id="land_4" class="landingItem">
+          <div class="bg_4">
+              <div class="decoy">4</div>
+          </div>
+      </div>
+      <div id="land_5" class="landingItem">
+          <div class="bg_5">
+              <div class="decoy">5</div>
+          </div>
+      </div>
+      <div id="land_6" class="landingItem">
+          <div class="bg_6">
+              <div class="decoy">6</div>
+          </div>
       </div>
     </div>
-  </div>
-  <!-- Footer -->
-  <footer class="page-footer pt-4 wow fadeInUp">
-
-    <!-- Footer Links -->
-    <div class="container text-center text-md-left">
-
-      <!-- Grid row -->
-      <div class="row">
-
-        <!-- Grid column -->
-        <div class="col-md-6 mt-md-0 mt-3">
-
-          <!-- Content -->
-          <h5 class="text-uppercase">Footer Content</h5>
-          <p>Here you can use rows and columns here to organize your footer content.</p>
-
-        </div>
-        <!-- Grid column -->
-
-        <hr class="clearfix w-100 d-md-none pb-3">
-
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-
-          <!-- Links -->
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-          </ul>
-
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-
-          <!-- Links -->
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-          </ul>
-
-        </div>
-        <!-- Grid column -->
-
-      </div>
-      <!-- Grid row -->
-
-    </div>
-    <!-- Footer Links -->
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3"><a href="http://bezrukavnikov.ru">bezrukavnikov.ru</a> © 2018
-    </div>
-    <!-- Copyright -->
-
+  
+  <footer>
+    <div class="tomoru-font-3">Gexar © 2018</div>
   </footer>
-  <!-- Footer -->
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
   <!--wow js-->
   <script src="js/wow.min.js"></script>
   <!-- init javascript -->
